7Week/Lecture/DockerAndKube/DemoDocs/kubernetes-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-service-deployment
  labels:
    app: docker-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-service
  template:
    metadata:
      labels:
        app: docker-service
    spec:
      containers:
      - name: docker
        image: abatson/dockerservice:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
